bisonc++ (6.01.00)

  * Removed std:: in front of thread_local in generated code

  * Removed definitions of the Yodl tr-macro from .yo files: it is a
    predefined macro in Yodl 4.02.00, and is not used in de documentation.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 20 Jan 2018 11:40:25 +0100

bisonc++ (6.00.00)

  * The generated code was rewritten. The protected interface of ParserBase
    and names of parse()-related members in Parser was modified. The names of
    all accessible members in parserbase.h and parser.h now have two trailing
    underscore characters. 
    Predefined members in parser.ih no longer have trailing underscores, and
    can be redefined.  
    The traditional error(char const *) member in fact never uses its argument
    (and bisonc++ only passed the default "Syntax error" argument). Its
    prototype now no longer defines a parameter.  Here's an overview of
    modified member names/signatures:

        --------------------------------------------------------
        Before 6.00.00               Starting with 6.00.00
        --------------------------------------------------------
        void error(char const *);    void error();
    
        void exceptionHandler__(...  void exceptionHandler(...
    
        void errorRecovery();        void errorRecovery__();
        void executeAction(int);     void executeAction__(int);
        void nextToken();            void nextToken__();
        --------------------------------------------------------
    
                                     added:
                                     ---------------------------
                                     void nextCycle__();
                                     ---------------------------
                                     removed:
                                     ---------------------------
                                     int lookup(bool);
                                     ---------------------------
