@@ -17,7 +17,7 @@
 <body>
 <hr/>
 <h1 id="title">bisonc++input(7)</h1>
-<h2 id="author">bisonc++ grammar file organization<br/>(bisonc++.6.01.00.tar.gz)</h2>
+<h2 id="author">bisonc++ grammar file organization<br/>(bisonc++.6.01.01.tar.gz)</h2>
 <h2 id="date">2005-2018</h2>
 
 
