@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Bisonc++ V 6.01.00</title>
+<title>Bisonc++ V 6.01.01</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -17,7 +17,7 @@
 </head>
 <body>
 <hr/>
-<h1 id="title">Bisonc++ V 6.01.00</h1>
+<h1 id="title">Bisonc++ V 6.01.01</h1>
 <h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
 <h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">2005-2018</h2>
@@ -39,6 +39,8 @@ by its tag or download the matching <code >.zip</code> or <code >.tar.gz</code> 
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/6.01.01">6.01.01</a>
+Jan 23 2018;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/6.01.00">6.01.00</a>
 Jan 20 2018;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/6.00.00">6.00.00</a>
@@ -46,9 +48,7 @@ May 18 2017;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/5.03.00">5.03.00</a>
 Jan 28 2017;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/5.02.01">5.02.01</a>
-May 20 2016;
-        <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/5.02.00">5.02.00</a>
-May 15 2016.
+May 20 2016.
         </ul>
     
 <p>
