@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title><div style="text-align: center"><strong >Bisonc++</strong> (Version 6.01.00) User Guide</div></title>
+<title><div style="text-align: center"><strong >Bisonc++</strong> (Version 6.01.01) User Guide</div></title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
@@ -15,7 +15,7 @@
 </head>
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
-<h1 id="title"><div style="text-align: center"><strong >Bisonc++</strong> (Version 6.01.00) User Guide</div></h1>
+<h1 id="title"><div style="text-align: center"><strong >Bisonc++</strong> (Version 6.01.01) User Guide</div></h1>
 <h2 id="author"><div style="text-align: center">Frank B. Brokken</div></h2>
 
 <h2 id="affiliation"><div style="text-align: center">Center for Information Technology,<br/>
@@ -24,7 +24,7 @@
 <h1>Table of Contents</h1>
 <dl><dt><h2><a href="bisonc++01.html#l1">Chapter 1: Introduction</a></h2></dt>
 <dd><dl>
-<dt><h3><a href="bisonc++01.html#l2">1.1: What's new in version 6.01.00</a></h3></dt>
+<dt><h3><a href="bisonc++01.html#l2">1.1: What's new in version 6.01.01</a></h3></dt>
 </dl></dd>
 <dt><h2><a href="bisonc++02.html#l3">Chapter 2: Conditions for Using Bisonc++</a></h2></dt>
 <dd><dl>
