@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title> <div style="text-align: center"><strong >Bisonc++</strong> (Version 6.01.00) User Guide</div> </title>
+<title> <div style="text-align: center"><strong >Bisonc++</strong> (Version 6.01.01) User Guide</div> </title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
@@ -56,7 +56,7 @@ B. Brokken</a>. The program's first version was
 constructed between November 2004 and May 2005.
 <p>
 <a name="l2"></a>
-<h2 >1.1: What's new in version 6.01.00</h2>
+<h2 >1.1: What's new in version 6.01.01</h2>
     If you're new to <strong >bisonc++</strong>, you can safely skip this section. If you used <strong >bisonc++</strong>
 before, please note the following new and modified features:
     <ul>
