@@ -1,3 +1,10 @@
+bisonc++ (6.01.01)
+
+  * Fixed a missing destination for the link to the sources of the rpn
+    calculator mentioned in Ch. 6 of the user manual.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 23 Jan 2018 12:59:39 +0100
+
 bisonc++ (6.01.00)
 
   * Removed std:: in front of thread_local in generated code
